Fix Horizontal Overflow Issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,8 @@ body {
     color: var(--textColor);
 
     width: 100vw;
+
+    overflow-x: hidden;
 }
 
 /* Navbar */
